--- a/src/app/component/post-grid/post-grid.component.scss
+++ b/src/app/component/post-grid/post-grid.component.scss
@@ -1,10 +1,47 @@
-
-.header {
-  font-size: 1.2rem;
-  margin-bottom: 1rem;
+.loading-container {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  height: 95vh;
+  width: 95vw;
+  .loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-bottom-color: #FF3D00;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+  }
+
+  @keyframes rotation {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
+.header-container{
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .btn-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-grow: 1;
+  }
+  .header {
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-grow: 1.1;
+  }
 }
 
 .grid {
