starting to add test and TSdoc and removing unnecessary code

--- a/src/app/component/post-grid/post-grid.component.html
+++ b/src/app/component/post-grid/post-grid.component.html
@@ -1,23 +1,29 @@
-<div class="loading-container" *ngIf="loading$ | async; else grid">
-  <span class="loader"></span>
-</div>
-
-<ng-template #grid>
+@if (loading$ | async) {
+  <div class="loading-container">
+    <span class="loader"></span>
+  </div>
+} @else {
   <div class="header-container">
     <div class="btn-wrapper">
       <button (click)="toggle()">
-        {{ isDark() ? '🌙 Dark' : '☀️ Light' }}
+        {{isDarkMode() ? '🌙 Dark' : '☀️ Light' }}
       </button>
     </div>
-    <div class="header" *ngIf="selectedId$ | async as currentId">
-      Active Post ID: {{ currentId }}
-    </div>
+    @if ((selectedId$ | async)! > 0) {
+      <div class="header">
+        Active Post ID: {{ selectedId$ | async }}
+      </div>
+    }
   </div>
   <div class="grid">
-    <app-post-square
-      *ngFor="let post of posts$ | async; trackBy: trackById"
-      [post]="post"
-      [selectedId]="selectedId$ | async">
-    </app-post-square>
+    @for (post of posts$ | async; track $index) {
+      <app-post-square
+        [post]="post"
+        [selectedId]="selectedId$ | async">
+      </app-post-square>
+    }
   </div>
-</ng-template>
+}
+
+
+
