--- a/src/app/component/post-grid/post-grid.component.scss
+++ b/src/app/component/post-grid/post-grid.component.scss
@@ -25,8 +25,9 @@
   }
 }
 .header-container{
-  height: 30px;
+  height: 70px;
   display: flex;
+  position: static;
   align-items: center;
   justify-content: center;
   .btn-wrapper {
@@ -34,13 +35,34 @@
     align-items: center;
     justify-content: flex-start;
     flex-grow: 1;
+    button {
+      background: #5E5DF0;
+      border-radius: 999px;
+      box-shadow: #5E5DF0 0 10px 20px -10px;
+      box-sizing: border-box;
+      color: #FFFFFF;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 24px;
+      opacity: 1;
+      outline: 0 solid transparent;
+      padding: 8px 18px;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+      width: fit-content;
+      word-break: break-word;
+      border: 0;
+    }
   }
   .header {
-    font-size: 1.2rem;
+    font-size: 30px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-grow: 1.1;
+    position: fixed;
   }
 }
 
