changing the darkmode btn with new colors

--- a/src/app/component/post-grid/post-grid.component.html
+++ b/src/app/component/post-grid/post-grid.component.html
@@ -16,7 +16,7 @@
     }
   </div>
   <div class="grid">
-    @for (post of posts$ | async; track $index) {
+    @for (post of posts$ | async; track post.id) {
       <app-post-square
         [post]="post"
         [selectedId]="selectedId$ | async">
