removing un nessesery files and adding spinnig to the square

--- a/src/app/component/post-grid/post-grid.component.html
+++ b/src/app/component/post-grid/post-grid.component.html
@@ -6,7 +6,7 @@
   <div class="header-container">
     <div class="btn-wrapper">
       <button (click)="toggle()">
-        {{isDarkMode() ? '🌙 Dark' : '☀️ Light' }}
+        {{isDarkMode() ? '🌙' : '☀️' }}
       </button>
     </div>
     @if ((selectedId$ | async)! > 0) {
