--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 :root {
-  --bg: #fdfdfd;
+  --bg: #FFFBF1;
   --text: #111;
-  --card-bg: #fff;
+  --card-bg: #F0DFBC;
   --shadow: 0 2px 8px rgba(0,0,0,0.05);
   --accent: #f39c12;
   --primary: #1e90ff;
