--- a/src/app/component/post-square/post-square.component.scss
+++ b/src/app/component/post-square/post-square.component.scss
@@ -5,7 +5,7 @@
   box-shadow: var(--shadow);
   border: 1px solid var(--text);
   aspect-ratio: 1 / 1;
-  transition: transform 0.3s, box-shadow 0.3s;
+  transition: background-color 3s ease, color 3s ease;
   cursor: pointer;
   user-select: none;
   overflow: hidden;
@@ -23,7 +23,7 @@
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
-  transition: transform 0.6s;
+  transition: background-color 3s ease, color 3s ease;
   display: flex;
 }
 
@@ -43,6 +43,7 @@
   background-color: var(--card-bg);
   color: var(--text);
   box-shadow: var(--shadow);
+  transition: background-color 3s ease, color 3s ease;
 }
 
 .card-front {
